--- a/css/editor-blocks.css
+++ b/css/editor-blocks.css
@@ -77,6 +77,7 @@ Description: Used to style blocks in the editor.
 
 .wp-block {
 	max-width: 655px; /* 625px + 30px for padding */
+	font-family: "Bai Jamjuree", sans-serif;
 }
 
 /* Link styles */
@@ -290,7 +291,7 @@ p.has-drop-cap:not(:focus)::first-letter {
 }
 
 .edit-post-visual-editor .wp-block-pullquote {
-	margin: 0;
+	/*margin: 0;*/
 }
 
 .wp-block-pullquote .wp-block-pullquote__citation,
