--- a/editor-style.css
+++ b/editor-style.css
@@ -11,7 +11,7 @@ html .mceContentBody {
 }
 body {
 	color: #444;
-	font-family: 'Bai Jamjuree', sans-serif;
+	font-family: "Bai Jamnjuree", sans-serif;
 	font-size: 14px;
 	font-size: 1rem;
 	line-height: 1;
